--- a/bibliography.bib
+++ b/bibliography.bib
@@ -345,6 +345,26 @@ url = {http://stacks.iop.org/0004-637X/790/i=1/a=53?key=crossref.9d645e0639bbde4
 volume = {790},
 year = {2014}
 }
+@article{Showman2011,
+abstract = {The increasing richness of exoplanet observations has motivated a variety of three-dimensional atmospheric circulation models of these planets. Under strongly irradiated conditions, models of tidally locked, short-period planets (both hot Jupiters and terrestrial planets) tend to exhibit a circulation dominated by a fast eastward, or "superrotating," jet stream at the equator. Under appropriate conditions, this phenomenon can cause the hottest regions to be displaced eastward from the substellar point by tens of degrees longitude. Such an offset has been observed on HD 189733b, supporting the possibility of equatorial jets on short-period exoplanets. Despite its relevance, however, the dynamical mechanisms responsible for generating the equatorial superrotation in such models have not been identified. Here, we show that the equatorial jet results from the interaction of the mean flow with standing, planetary-scale Rossby and Kelvin waves induced by the day-night thermal forcing. The Rossby waves develop phase tilts that pump eastward momentum from high latitudes to the equator, thereby inducing equatorial superrotation. We present an analytic theory demonstrating this mechanism and explore its properties in a hierarchy of one-layer (shallow-water) calculations and fully 3D models. The wave-mean-flow interaction produces an equatorial jet whose latitudinal width is comparable to that of the Rossby waves, namely the equatorial Rossby deformation radius modified by radiative and frictional effects. For conditions typical of synchronously rotating hot Jupiters, this length is comparable to a planetary radius, explaining the broad scale of the equatorial jet obtained in most hot Jupiter models. Our theory illuminates the dependence of the equatorial jet speed on forcing amplitude, strength of friction, and other parameters, as well as the conditions under which jets can form at all.},
+archivePrefix = {arXiv},
+arxivId = {1103.3101},
+author = {Showman, Adam P and Polvani, Lorenzo M},
+doi = {10.1088/0004-637X/738/1/71},
+eprint = {1103.3101},
+file = {:home/tom/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Showman, Polvani - 2011 - EQUATORIAL SUPERROTATION ON TIDALLY LOCKED EXOPLANETS.pdf:pdf},
+isbn = {0004-637X},
+issn = {0004-637X},
+journal = {The Astrophysical Journal},
+keywords = {analytical,atmospheres,color figures,hd 189733b,hydrodynamics,individual,methods,numerical,online-only material,planets and satellites,waves},
+month = {sep},
+number = {1},
+pages = {71},
+title = {{EQUATORIAL SUPERROTATION ON TIDALLY LOCKED EXOPLANETS}},
+url = {http://arxiv.org/abs/1103.3101 http://stacks.iop.org/0004-637X/738/i=1/a=71?key=crossref.c1b91d0d1f5f5e89121c6529aead261c},
+volume = {738},
+year = {2011}
+}
 @article{Foreman-Mackey2013,
 abstract = {We introduce a stable, well tested Python implementation of the affine-invariant ensemble sampler for Markov chain Monte Carlo (MCMC) proposed by Goodman {\&} Weare (2010). The code is open source and has already been used in several published projects in the astrophysics literature. The algorithm behind emcee has several advantages over traditional MCMC sampling methods and it has excellent performance as measured by the autocorrelation time (or function calls per independent sample). One major advantage of the algorithm is that it requires hand-tuning of only 1 or 2 parameters compared to {\$}\backslashsim N{\^{}}2{\$} for a traditional algorithm in an N-dimensional parameter space. In this document, we describe the algorithm and the details of our implementation and API. Exploiting the parallelism of the ensemble method, emcee permits any user to take advantage of multiple CPU cores without extra effort. The code is available online at http://dan.iel.fm/emcee under the MIT License.},
 archivePrefix = {arXiv},
